# gameshell

./: .clang-format  LICENSE  README.md  commands.c  commands.h  entries.c  entries.h  font.h  gamepad.c  gamepad.h  gfx.c  gfx.h  image.c  image.h  log.c  log.h  main.c  menu.c  menu.h  meson.build  signals.c  signals.h  system.c  system.h  window.c  window.h
fonts/: ChakraPetch-SemiBold.fnt  chakra_petch_40_2x.c  chakra_petch_80.c  dos.c  mkfont.rb  msdf-atlas-gen  source_sans_pro_82.c
samples/: .gitignore  dirwalk.c  gamepad_detect.c  pthread_poll.c
shaders/: fragment.glsl  meson.build  rect_frag.glsl  rect_vert.glsl  text_frag.glsl  text_vert.glsl  vertex.glsl
